# GeoTiffConverter

./: CMakeLists.txt  README.md  commonfunctions.cpp  commonfunctions.h  configurergbform.cpp  configurergbform.h  configurergbform.ui  conversionparameters.cpp  conversionparameters.h  displaytask.cpp  displaytask.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pngfunctions.cpp  pngfunctions.h  qtfunctions.cpp  tifffunctions.cpp  tifffunctions.h
